// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-1dsa5t3 ant-btn-default"
    type="button"
  >
    <span>
      button
    </span>
  </button>
</div>
`;

exports[`test disabled 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-1dsa5t3 ant-btn-default"
    disabled=""
    type="button"
  >
    <span>
      button
    </span>
  </button>
</div>
`;
